<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/PhoneLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_using_phone"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/EmailLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_using_email"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/PhoneLogin"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/GoogleLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_using_gmail"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/PhoneLogin"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GoogleLogin" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/app_background_2" />

</androidx.constraintlayout.widget.ConstraintLayout>
